--- a/aquaResult.html
+++ b/aquaResult.html
@@ -391,16 +391,17 @@
         </div>
         <form class="aquaResult__call-form">
           <div class="aquaResult__call-input-wrapper name">
-            <input required class="aquaResult__call-input" type="text" placeholder="Имя">
-            <span class="aquaResult__call-required">*</span>
+            <input required class="aquaResult__call-input" type="text">
+            <p class="aquaResult__call-required">Имя<span>*</span></p>
+
           </div>
           <div class="aquaResult__call-input-wrapper tel">
-            <input required class="aquaResult__call-input tel" type="tel" placeholder="Телефон">
-            <span class="aquaResult__call-required">*</span>
+            <input required class="aquaResult__call-input tel" type="tel">
+            <p class="aquaResult__call-required">Телефон<span>*</span></p>
           </div>
           <div class="aquaResult__call-input-wrapper email">
-            <input required class="aquaResult__call-input" type="email" placeholder="Email">
-            <span class="aquaResult__call-required">*</span>
+            <input required class="aquaResult__call-input" type="email">
+            <p class="aquaResult__call-required">Email<span>*</span></p>
           </div>
           <div class="aquaResult__picker"> 
             <label for="filePicker">
