--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
                     </svg>
                   </label>
                 </div>
+                <!-- <p class="aquaForm__alert">Поле обязательно для заполнения</p> -->
               </div>
 
               <div class="aquaForm__input">
@@ -173,15 +174,16 @@
                 <div class="aquaForm__input-wrapper">
                   <input required class="aquaForm__input-inner" type="text" placeholder="0 Уд. рН">
                 </div>
+                <!-- <p class="aquaForm__alert">Поле обязательно для заполнения</p> -->
               </div>
             </div>
-
             <div class="aquaForm__inputs margin">
-              <div class="aquaForm__input">
+              <div class="aquaForm__input alert">
                 <p>Общеесолесодержание (TDS/сухой остаток)<span>*</span></p>
                 <div class="aquaForm__input-wrapper">
                   <input required class="aquaForm__input-inner" type="text" placeholder="20 мг/л">
                 </div>
+                <p class="aquaForm__alert">Поле обязательно для заполнения</p>
               </div>
 
               <div class="aquaForm__input">
@@ -189,6 +191,7 @@
                 <div class="aquaForm__input-wrapper">
                   <input required class="aquaForm__input-inner" type="text" placeholder="0 мг/л">
                 </div>
+                <!-- <p class="aquaForm__alert">Поле обязательно для заполнения</p> -->
               </div>
             </div>
 
@@ -198,6 +201,7 @@
                 <div class="aquaForm__input-wrapper">
                   <input required class="aquaForm__input-inner" type="text" placeholder="0 мг/л">
                 </div>
+                <!-- <p class="aquaForm__alert">Поле обязательно для заполнения</p> -->
               </div>
 
               <div class="aquaForm__input">
@@ -205,6 +209,7 @@
                 <div class="aquaForm__input-wrapper">
                   <input required class="aquaForm__input-inner" type="text" placeholder="0 мгО2/л">
                 </div>
+                <!-- <p class="aquaForm__alert">Поле обязательно для заполнения</p> -->
               </div>
             </div>
 
@@ -214,6 +219,7 @@
                 <div class="aquaForm__input-wrapper">
                   <input required class="aquaForm__input-inner" type="text" placeholder="0 мг/л">
                 </div>
+                <!-- <p class="aquaForm__alert">Поле обязательно для заполнения</p> -->
               </div>
 
               <div class="aquaForm__input">
@@ -221,6 +227,7 @@
                 <div class="aquaForm__input-wrapper">
                   <input required class="aquaForm__input-inner" type="text" placeholder="0 мг/дм3">
                 </div>
+                <!-- <p class="aquaForm__alert">Поле обязательно для заполнения</p> -->
               </div>
             </div>
 
@@ -230,6 +237,7 @@
                 <div class="aquaForm__input-wrapper">
                   <input required class="aquaForm__input-inner" type="text" placeholder="0 град">
                 </div>
+                <!-- <p class="aquaForm__alert">Поле обязательно для заполнения</p> -->
               </div>
 
               <div class="aquaForm__input">
@@ -237,6 +245,7 @@
                 <div class="aquaForm__input-wrapper">
                   <input required class="aquaForm__input-inner" type="text" placeholder="0 ЕМФ">
                 </div>
+                <!-- <p class="aquaForm__alert">Поле обязательно для заполнения</p> -->
               </div>
             </div>
 
@@ -280,8 +289,9 @@
               <button class="aquaForm__btn">Подобрать систему</button>
             </div>
           </div>
+
           <div class="aquaForm__content">
-            <fieldset class="aquaForm__radio-wrapper">
+            <fieldset class="aquaForm__radio-wrapper result">
               <div class="aquaForm__legend-wrapper">
                 <legend class="aquaForm__legend">На нагревательных приборах (чайник, ТЭН) образуется накипь   
                 </legend>
@@ -313,7 +323,7 @@
               </div>
             </fieldset>
 
-            <fieldset class="aquaForm__radio-wrapper margin">
+            <fieldset class="aquaForm__radio-wrapper margin result">
               <div class="aquaForm__legend-wrapper">
                 <legend class="aquaForm__legend">У исходной воды присутсвует запах сероводорода?  
                 </legend>
