--- a/aquaResult.html
+++ b/aquaResult.html
@@ -345,6 +345,9 @@
 
       <div class="aquaResult__item">
         <h1 class="aquaResult__title">Результат подбора</h1>
+        <div class="aquaResult__info-title-wrapper mobile">
+          <h2 class="aquaResult__info-title">Система обратного осмоса</h2>
+        </div>
         <div class="aquaResult__inner-wrapper">
           <div class="swiper mySwiperAqua">
             <div class="swiper-wrapper">
@@ -358,7 +361,9 @@
           </div>
 
           <div class="aquaResult__info">
-            <h2 class="aquaResult__info-title">Система обратного осмоса</h2>
+            <div class="aquaResult__info-title-wrapper">
+              <h2 class="aquaResult__info-title">Система обратного осмоса</h2>
+            </div>
             <div class="aquaResult__info-text">
               <div class="aquaResult__info-text-item">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="20" viewBox="0 0 16 20" fill="none">
